--- a/index.html
+++ b/index.html
@@ -20,9 +20,11 @@
           <div class="container two">
               <div class="circle"></div>
               <div class="circle"></div>
-              <div class="circle"></div>
-              <div class="circle"></div>
-              <div class="circle"></div>
+              <div class="container__within">
+              <div class="circle right"></div>
+              <div class="circle middle"></div>
+              <div class="circle left"></div>
+              </div>
           </div>
           <div class="container three">
               <div class="circle"></div>
